Issue #3530862 by lostcarpark, mherchel, divya.sejekan, rkoller, pierregermain: The default icon for field types with no icon assigned has a too low color contrast

--- a/core/modules/field_ui/css/field_ui.icons.theme.pcss.css
+++ b/core/modules/field_ui/css/field_ui.icons.theme.pcss.css
@@ -2,7 +2,7 @@
 .field-option__icon {
   position: relative;
   height: 100%;
-  background-image: url(../../../misc/icons/cacbd2/puzzle_piece_placeholder.svg);
+  background-image: url(../../../misc/icons/55565b/puzzle_piece_placeholder.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 36px;
